--- a/index.html
+++ b/index.html
@@ -41,7 +41,50 @@
         </section>
         <section id="nosso-time">
             <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+                <div id="title-box">
+                    <img src="Imagens/Rectangle 22.png" alt="">
+                </div>
+                <div id="img1-box">
+                    <img src="Imagens/Rectangle 21.png" alt="">
+                    <img class="rec21" src="Imagens/Rectangle 21.png" alt="">
+                    <img src="Imagens/Rectangle 21.png" alt="">
+                </div>
+                <div id="last-row">
+                    <div id="img2-box">
+                        <img src="Imagens/Rectangle 35.png" alt="">
+                        <img class="rec35" src="Imagens/Rectangle 35.png" alt="">
+                        <img src="Imagens/Rectangle 35.png" alt="">
+                    </div>
+                    <div id="elements">
+                        <div class="img3">
+                            <img class="rec24" src="Imagens/Rectangle 24.png" alt="">
+                            <img class="rec25" src="Imagens/Rectangle 25.png" alt="">
+                            <div class="ball-row">
+                                <img src="Imagens/Rectangle 38.png" alt="">
+                                <img class="ball-un" src="Imagens/Rectangle 38.png" alt="">
+                                <img src="Imagens/Rectangle 38.png" alt="">
+                            </div>
+                        </div>
+                        <div class="img3" id="img3-2">
+                            <img class="rec24" src="Imagens/Rectangle 24.png" alt="">
+                            <img class="rec25" src="Imagens/Rectangle 25.png" alt="">
+                            <div class="ball-row">
+                                <img src="Imagens/Rectangle 38.png" alt="">
+                                <img class="ball-un" src="Imagens/Rectangle 38.png" alt="">
+                                <img src="Imagens/Rectangle 38.png" alt="">
+                            </div>
+                        </div>
+                        <div class="img3">
+                            <img class="rec24" src="Imagens/Rectangle 24.png" alt="">
+                            <img class="rec25" src="Imagens/Rectangle 25.png" alt="">
+                            <div class="ball-row">
+                                <img src="Imagens/Rectangle 38.png" alt="">
+                                <img class="ball-un" src="Imagens/Rectangle 38.png" alt="">
+                                <img src="Imagens/Rectangle 38.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </article>    
         </section>
         <section id="contato">
