Versao Final do Sobre

--- a/index.html
+++ b/index.html
@@ -1,57 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/contato.css">
-    <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/header.css">
-    <link rel="stylesheet" href="CSS/home.css">
-    <link rel="stylesheet" href="CSS/nosso_time.css">
-    <link rel="stylesheet" href="CSS/pq_nos_escolher.css">
-    <link rel="stylesheet" href="CSS/servicos.css">
-    <link rel="stylesheet" href="CSS/sobre.css">
-    <title>CAR MECHANICS</title>
-</head>
-<body>
-    <header>
-        <!-- AQUI VAI O HEADER -->
-    </header>
-    <main>
-        <section id="home">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>
-        </section>
-        <section id="sobre">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
-        </section>
-        <section id="servicos">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
-        </section>
-        <section id="por-que-nos-escolher">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
-        </section>
-        <section id="nosso-time">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
-        </section>
-        <section id="contato">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
-        </section>
-    </main>
-    <footer>
-        <!-- AQUI VAI O FOOTER -->
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="CSS/contato.css">
+        <link rel="stylesheet" href="CSS/footer.css">
+        <link rel="stylesheet" href="CSS/header.css">
+        <link rel="stylesheet" href="CSS/home.css">
+        <link rel="stylesheet" href="CSS/nosso_time.css">
+        <link rel="stylesheet" href="CSS/pq_nos_escolher.css">
+        <link rel="stylesheet" href="CSS/servicos.css">
+        <link rel="stylesheet" href="CSS/sobre.css">
+        <title>CAR MECHANICS</title>
+    </head>
+    <body>
+        <header>
+            <!-- AQUI VAI O HEADER -->
+        </header>
+        <main>
+            <section id="home">
+                <article>
+                    <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+                </article>
+            </section>
+            <section id="sobre">
+                <article>
+                    <div class="imagem">
+                        <img src="Imagens/Rectangle 21.png" alt="Foto lateral
+                            esquerda">
+                        <div>
+                            <h1 class="cabeçalho">CAR MECHANICS COMPANY</h1>
+                            <p class="textos">Lorem ipsum dolor, sit amet
+                                consectetur adipisicing elit. Ratione totam
+                                placeat vero,
+                                quibusdam facere
+                                optio
+                                quod itaque illo! Aliquam facilis magni aut qui
+                                laborum doloribus excepturi ab officia in nulla?
+                                Lorem
+                                ipsum
+                                dolor sit amet consectetur adipisicing elit.
+                                Voluptate quo odit magni adipisci, delectus
+                                distinctio a
+                                minus
+                                incidunt impedit laboriosam quidem odio tenetur
+                                quae dolorum nostrum iste neque mollitia
+                                dolores! Lorem
+                                ipsum dolor sit amet consectetur adipisicing
+                                elit. Illo inventore vero incidunt, debitis
+                                placeat ullam
+                                eaque
+                                quisquam laboriosam temporibus veniam optio
+                                facilis sed cumque saepe? Expedita quos iste
+                                perspiciatis
+                                quasi?
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Quia laboriosam quasi quod,
+                                ipsa mollitia
+                                laborum,
+                                aliquam atque vitae tempore hic, esse architecto
+                                rerum. Exercitationem corporis eaque, libero
+                                reprehenderit
+                                doloremque ad!</p>
+
+                            <p class="textos">Lorem ipsum dolor sit, amet
+                                consectetur adipisicing elit. Ipsum laborum
+                                sequi, dignissimos
+                                voluptatibus
+                                aut
+                                doloribus dicta explicabo eos porro minima ad
+                                labore maxime officiis numquam laboriosam! Ipsum
+                                vero
+                                mollitia
+                                recusandae?</p>
+
+                            <button class="botao">
+                                Saiba Mais
+                            </button>
+                        </div>
+
+                    </div>
+                </article>
+            </section>
+            <section id="servicos">
+                <article>
+                    <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+                </article>
+            </section>
+            <section id="por-que-nos-escolher">
+                <article>
+                    <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+                </article>
+            </section>
+            <section id="nosso-time">
+                <article>
+                    <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+                </article>
+            </section>
+            <section id="contato">
+                <article>
+                    <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+                </article>
+            </section>
+        </main>
+        <footer>
+            <!-- AQUI VAI O FOOTER -->
+        </footer>
+    </body>
 </html>
