--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="nosso-time">
             <article>
                 <div id="title-box">
-                    <img src="Imagens/Rectangle 22.png" alt="">
+                    <h2>NOSSO TIME</h2>
                 </div>
                 <div id="img1-box">
                     <img src="Imagens/Rectangle 21.png" alt="">
@@ -57,8 +57,8 @@
                     </div>
                     <div id="elements">
                         <div class="img3">
-                            <img class="rec24" src="Imagens/Rectangle 24.png" alt="">
-                            <img class="rec25" src="Imagens/Rectangle 25.png" alt="">
+                            <h3 class="rec24">Pedro Maquito</h3>
+                            <p class="rec25">Gerente</p>
                             <div class="ball-row">
                                 <img src="Imagens/Rectangle 38.png" alt="">
                                 <img class="ball-un" src="Imagens/Rectangle 38.png" alt="">
@@ -66,8 +66,8 @@
                             </div>
                         </div>
                         <div class="img3" id="img3-2">
-                            <img class="rec24" src="Imagens/Rectangle 24.png" alt="">
-                            <img class="rec25" src="Imagens/Rectangle 25.png" alt="">
+                            <h3 class="rec24">Saler Lourenço</h3>
+                            <p class="rec25">Faxineiro</p>
                             <div class="ball-row">
                                 <img src="Imagens/Rectangle 38.png" alt="">
                                 <img class="ball-un" src="Imagens/Rectangle 38.png" alt="">
@@ -75,8 +75,8 @@
                             </div>
                         </div>
                         <div class="img3">
-                            <img class="rec24" src="Imagens/Rectangle 24.png" alt="">
-                            <img class="rec25" src="Imagens/Rectangle 25.png" alt="">
+                            <h3 class="rec24">João Sirquera</h3>
+                            <p class="rec25">Estoquista</p>
                             <div class="ball-row">
                                 <img src="Imagens/Rectangle 38.png" alt="">
                                 <img class="ball-un" src="Imagens/Rectangle 38.png" alt="">
