--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 </head>
 <body>
     <header>
-        <!-- AQUI VAI O HEADER -->
+        <div class="texto-header">
+        <a> Home</a>
+        <a> Sobre</a>
+        <a> Serviços</a>
+        <a> Por que nos escolher?</a>
+        <a> Nosso time</a>
+        <a> Contato</a>
+        </div>
     </header>
     <main>
         <section id="home">
