--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="CSS/sobre.css">
     <title>CAR MECHANICS</title>
 </head>
+
 <body>
     <header>
         <!-- AQUI VAI O HEADER -->
@@ -27,31 +29,91 @@
         <section id="sobre">
             <article>
                 <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
+            </article>
         </section>
         <section id="servicos">
             <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
+                <div class="titulo">
+                    <h2>Nossos serviços</h2>
+                </div>
+                <div class="linha-servicos">
+                    <div class="card_servicos">
+                        <div class="imagens"><img src="Imagenzinhas/manutenção preventiva.png"
+                                alt="manutenção_preventiva"></div>
+                        <h2>Manutenção Preventiva</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis iure possimus ea
+                            tempore consectetur.
+                            Quasi iure in quas architecto possimus, nemo reprehenderit, nostrum id quo dignissimos,
+                            atque tempora nulla nam.</p>
+                    </div>
+                    <div class="card_servicos">
+                        <div class="imagens"><img src="Imagenzinhas/alinhamento-e-balanceamento.jpg"
+                                alt="alinhamento-e-balanceamento"></div>
+                        <h2>Alinhamento e Balanceamento</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis iure possimus ea
+                            tempore consectetur.
+                            Quasi iure in quas architecto possimus, nemo reprehenderit, nostrum id quo dignissimos,
+                            atque tempora nulla nam.
+                        </p>
+                    </div>
+                    <div class="card_servicos">
+                        <div class="imagens"><img src="Imagenzinhas/troca de óleo.jpg" alt="troca_de_óleo"></div>
+                        <h2>Troca de Óleo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis iure possimus ea
+                            tempore consectetur.
+                            Quasi iure in quas architecto possimus, nemo reprehenderit, nostrum id quo dignissimos,
+                            atque tempora nulla nam.
+                        </p>
+                    </div>
+                </div>
+                <div class="linha-servicos">
+                    <div class="card_servicos">
+                        <div class="imagens"><img src="Imagenzinhas/Serviço de Freios.jpg" alt="Serviço_de_freios">
+                        </div>
+                        <h2>Serviço de Freios</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis iure possimus ea
+                            tempore consectetur.
+                            Quasi iure in quas architecto possimus, nemo reprehenderit, nostrum id quo dignissimos,
+                            atque tempora nulla nam.</p>
+                    </div>
+                    <div class="card_servicos">
+                        <div class="imagens"><img src="Imagenzinhas/troca_de_pneu.jpg" alt="troca_de_pneu"></div>
+                        <h2>Troca de Pneu</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis iure possimus ea
+                            tempore consectetur.
+                            Quasi iure in quas architecto possimus, nemo reprehenderit, nostrum id quo dignissimos,
+                            atque tempora nulla nam.</p>
+                    </div>
+                    <div class="card_servicos">
+                        <div class="imagens"><img src="Imagenzinhas/diagnostico.jpg" alt="diagnostico_de_erros"></div>
+                        <h2>Diagnostico de Erros</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis iure possimus ea
+                            tempore consectetur.
+                            Quasi iure in quas architecto possimus, nemo reprehenderit, nostrum id quo dignissimos,
+                            atque tempora nulla nam.</p>
+                    </div>
+                </div>
+            </article>
         </section>
         <section id="por-que-nos-escolher">
             <article>
                 <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
+            </article>
         </section>
         <section id="nosso-time">
             <article>
                 <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
+            </article>
         </section>
         <section id="contato">
             <article>
                 <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
-            </article>    
+            </article>
         </section>
     </main>
     <footer>
         <!-- AQUI VAI O FOOTER -->
     </footer>
 </body>
+
 </html>
