--- a/index.html
+++ b/index.html
@@ -35,8 +35,76 @@
             </article>    
         </section>
         <section id="por-que-nos-escolher">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+            <article id="porque">
+                    <h1>Por que nos escolher?</h1>
+                    <div id="wrapper">
+                        <div class="porque-card">
+                            <div class="porque-img"><img src="placeholder.png" alt=""></div>
+                            <div class="porque-txt"> 
+                                <h2>
+                                    Lorem Ipsum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="porque-card">
+                            <div class="porque-img"><img src="placeholder.png" alt=""></div>
+                            <div class="porque-txt"> 
+                                <h2>
+                                    Lorem Ipsum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="porque-card">
+                            <div class="porque-img"><img src="placeholder.png" alt=""></div>
+                            <div class="porque-txt"> 
+                                <h2>
+                                    Lorem Ipsum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="porque-card">
+                            <div class="porque-img"><img src="placeholder.png" alt=""></div>
+                            <div class="porque-txt"> 
+                                <h2>
+                                    Lorem Ipsum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="porque-card">
+                            <div class="porque-img"><img src="placeholder.png" alt=""></div>
+                            <div class="porque-txt"> 
+                                <h2>
+                                    Lorem Ipsum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="porque-card">
+                            <div class="porque-img"><img src="placeholder.png" alt=""></div>
+                            <div class="porque-txt"> 
+                                <h2>
+                                    Lorem Ipsum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
             </article>    
         </section>
         <section id="nosso-time">
@@ -44,14 +112,61 @@
                 <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
             </article>    
         </section>
-        <section id="contato">
-            <article>
-                <!-- AQUI VAI OS CÓDIGO DESSA SEÇÃO -->
+        <section id="nosso-contato">
+            <article id="contato">
+                    <h1>
+                        Entre em Contato
+                    </h1>
+                    <div id="contato-box">
+                        <div id="wrapper">
+                            <div class="contato-card">
+                                <div class="contato-img"><img src="placeholder.png" alt=""></div>
+                                <div class="contato-txt"> 
+                                    <h2>
+                                        Lorem Ipsum
+                                    </h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="contato-card">
+                                <div class="contato-img"><img src="placeholder.png" alt=""></div>
+                                <div class="contato-txt"> 
+                                    <h2>
+                                        Lorem Ipsum
+                                    </h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="contato-card">
+                                <div class="contato-img"><img src="placeholder.png" alt=""></div>
+                                <div class="contato-txt"> 
+                                    <h2>
+                                        Lorem Ipsum
+                                    </h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="contato-input">
+                            <div id="text-mail">
+                                <input type="text" id="nome">
+                                <input type="email" name="" id="email">
+                            </div>
+                            <input type="" id="texto">
+                            <a href="contato.html" id="enviar">Enviar</a>
+                        </div>
+                    </div>
             </article>    
         </section>
     </main>
     <footer>
-        <!-- AQUI VAI O FOOTER -->
+        <h1>Footer</h1>
     </footer>
 </body>
 </html>
